--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,16 @@
             <artifactId>circe-optics_2.11</artifactId>
             <version>0.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.bazaarvoice.jolt</groupId>
+            <artifactId>jolt-core</artifactId>
+            <version>0.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bazaarvoice.jolt</groupId>
+            <artifactId>json-utils</artifactId>
+            <version>0.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
